# pilot-proxy

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  INTEGRATION.md  LICENSE  Makefile  README.md  pyproject.toml  run_sweeps.sh  trim_report.json
.github/workflows/: tests.yml
analysis/: README.md  _paths.py  aggressiveness_study.py  build_concept_fig.py  build_deliverables.py  build_empirical_thresholds.py  build_excess_histograms.py  build_fig1.py  build_fig2.py  build_histograms_all23.py  build_spectra_all23.py  ch27_interior.py  ch30_offair_minority.py  dump_perframe.py  dump_power.py  dump_spectra.py  env.example.sh  fig3_publication.py  fulldepth_and_subsets.py  pfb_zero_point_prediction.py  seasonal_propagation.py  survey_composition.py  tail_decomposition.py  threearm_fulldepth.py  zero_point_study.py
configs/detector_core/: pilotproxy_cuda_fstat_v1.json
configs/receiver_profiles/: chime_dtv_fengine.json  reference_800mhz_pfb.json
configs/stream_maps/: chime_feed_pol_example.json
cuda/: Makefile  config.h  f_statistic.cu  f_statistic.h  f_statistic_reference.cpp  f_statistic_reference.h
cuda/tests/: test_c_header.c  test_fstat_cuda.cpp  test_fstat_reference.cpp
data/census/: PROVENANCE.md  TV_Stations_UHF_within500mi_DRAO.xlsx  census.csv  census_from_xlsx.py
data/provenance/combine_subset_20260714/: README.md  combine_subset_decision.json  event_presence_signatures.npz
data/provenance/parity_gpu_20260715seed/: dtv_snr_eval.csv  dtv_snr_eval.json  dtv_snr_summary.csv
data/provenance/survey_stratum_20260718/: README.md  ch27_extension_quarterly.csv  ch30_offair_minority.csv  survey_assignment_quality.csv  survey_quarterly_exposure.csv  survey_quarterly_rates_all23.csv
data/provenance/t2_convention_20260718/: README.md  audit_orig_fullspan.json  audit_trim_fullspan.json  audit_v3.json  audit_v4.json  block_profile_20260718.txt  trim_report.json  trim_report_stationary.json
docs/: CANFAR_RUNBOOK.md  CHIME_REAL_DATA_V0_2.md  DATA_PRODUCTS.md  DESIGN_DECISIONS.md  KOTEKAN_INTERFACE_PREP.md  METHOD_SPEC.md  PAPER_PLAN.md  PUBLICATION_VALIDATION.md  PilotProxy_DS001_v1_3_Data_Sheet.tex  PilotProxy_DS001_v1_4_Data_Sheet.tex  PilotProxy_DS001_v1_5_Data_Sheet.tex  PilotProxy_DS001_v1_6_Data_Sheet.tex  PilotProxy_UG001_v1_3_User_Guide.tex  PilotProxy_UG001_v1_4_User_Guide.tex  PilotProxy_UG001_v1_5_User_Guide.tex  PilotProxy_UG001_v1_6_User_Guide.tex  product_schema_v2.md
docs/figures/: validation_flow.tikz  validation_flow_standalone.tex
examples/: expected_output_snippet.txt  quickstart.sh
paper/: .gitignore  README.md
paper/manuscript/: .latexmkrc  SUBMISSION_CHECKLIST.md  abstract.tex  appendices.tex  body.tex  draft_article.tex  main.tex  refs.bib
paper/manuscript/provenance/: ARCHIVE_COMPOSITION_2026-07-17.md  BUNDLES_HELDOUT.md  CHIME_PAPER_XCHECK_2026-07-17.md  DECISIONS_2026-07-17.md  FIG_REGEN_2026-07-17.md  GPU_PHASE1_2026-07-17.md  REFEREE_TRIAGE_R10_2026-07-18.md  REFEREE_TRIAGE_R5_2026-07-16.md  REFEREE_TRIAGE_R7_2026-07-17.md  REFEREE_TRIAGE_R8_2026-07-17.md  REFEREE_TRIAGE_R9_2026-07-17.md  hashes.sha256  (+21 more)
paper/supplement/: .latexmkrc  dissertation_supplement.tex  make_supp_figs.py  make_tone_gallery.py
scripts/: check_inventory.py  check_no_legacy_guard_terms.sh  check_repo_clean_for_commit.sh  check_scan.py  floor_from_raw.py  generate_results.py  launch_gpu_session.py  run_chime_local_calibration.sh  run_pd_sweep.sh  setup_env.sh  trim_pilot_amplitude.py
src/pilot_proxy/: __init__.py  atsc_channels.py  cli.py  detect.py  detector_contract.py  detector_geometry.py  detector_reference.py  detector_weights.py  dtv_units.py  gpu.py  json_utils.py  kernel.py  masking.py  paths.py  plot_style.py  provenance.py  reference_channelizer.py  result_schema.py  runtime_bundle.py
tests/: test_cli.py  test_mask_boundary.py
tests/chime/: test_chime_frame_adapter.py  test_chime_plots.py  test_chime_products.py  test_chime_reductions.py  test_chime_runner_small.py  test_choose_detector_k.py  test_cleaning_tradeoff.py  test_frequency_offset.py  test_injection_recovery.py  test_inspect_hdf5.py  test_segmented_input.py  test_validate_products.py
tests/core/: test_atsc_channels.py  test_detect_inputs.py  test_detector_weights.py  test_dtv_units.py  test_frame_geometry_adapter.py  test_integration_contract.py  test_json_utils.py  test_mask_zero_point.py  test_provenance.py  test_quantization_roundtrip.py  test_reference_pfb.py  test_result_schema.py  test_runtime_bundle.py  test_version_metadata.py
tests/datatrawl/: test_chime_combine_cli.py  test_combine_integrity_guards.py  test_combine_parity.py  test_detector_analyzer_parity.py  test_detector_resume.py  test_detector_schema_v2.py  test_event_keyed_combine.py  test_injection.py  test_metadata_inference.py  test_offset_analyzer_parity.py  test_offset_out_of_band.py  test_offset_resume.py  test_packed_reader.py  test_reader_contract_guards.py  test_scan_inventory_name.py  test_scan_layer.py  test_scan_parity.py  test_selection_validation.py
tests/kernel/: test_cuda_kernel_smoke.py
tests/testbench/: test_audit_atsc_signal.py  test_evaluate_dtv_snr.py  test_plot_results.py  test_summarize_results.py  test_transmitter_census.py
weights/: chime_dtv_weights_k128.bin.manifest.json
(+40 files in other folders)
